[package]
name = "arxiv"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
surf = "1.0.3"
anyhow = "1.0.32"
xml-rs = "0.8.3"
