[package]
name = "arxiv-rs"
version = "0.1.2"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
description = "A wrapper of the arXiv API for Rust"
repository = "https://github.com/moisutsu/arxiv-rs"
license = "MIT"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["arxiv", "api", "wrapper"]

[lib]
name = "arxiv"

[dependencies]
async-std = { version = "1.6.0", features = ["attributes"] }
surf = "1.0.3"
anyhow = "1.0.32"
xml-rs = "0.8.3"
