[package]
name = "arxiv-rs"
version = "0.1.4"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"
description = "A wrapper of the arXiv API for Rust"
repository = "https://github.com/moisutsu/arxiv-rs"
license = "MIT"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["arxiv", "api", "wrapper"]

[lib]
name = "arxiv"

[dependencies]
anyhow = "1.0.32"
xml-rs = "0.8.3"
reqwest = "0.11.2"

[dev-dependencies]
tokio = { version = "1.3.0", features = ["full"]}
